--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use or https://modmuss50.me/fabric.html
-	minecraft_version=1.15.2
-	yarn_mappings=1.15.2+build.14
-	loader_version=0.7.8+build.184
+	minecraft_version=20w11a
+	yarn_mappings=20w11a+build.6
+	loader_version=0.7.8+build.187
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -14,4 +14,4 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	# fabric_version=0.3.0+build.207
+	# fabric_version=0.5.3+build.308-1.16
