--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use or https://modmuss50.me/fabric.html
-	minecraft_version=1.16-rc1
-	yarn_mappings=1.16-rc1+build.5
-	loader_version=0.8.8+build.202
+	minecraft_version=1.16.1
+	yarn_mappings=1.16.1+build.20
+	loader_version=0.8.9+build.203
 
 # Mod Properties
 	mod_version = 1.0.0
