--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/use or https://modmuss50.me/fabric.html
-	minecraft_version=1.16.1
-	yarn_mappings=1.16.1+build.20
-	loader_version=0.8.9+build.203
+minecraft_version=1.16.1
+yarn_mappings=1.16.1+build.21
+loader_version=0.9.0+build.204
+
+#Fabric api
+fabric_version=0.16.0+build.384-1.16.1
 
 # Mod Properties
 	mod_version = 1.0.0
