updated to 1.16.2 (rc1)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-minecraft_version=1.16.1
-yarn_mappings=1.16.1+build.21
-loader_version=0.9.0+build.204
+# See https://modmuss50.me/fabric.html
+minecraft_version=1.16.2-rc1
+yarn_mappings=1.16.2-rc1+build.6
+loader_version=0.9.1+build.205
 
 # Mod Properties
-mod_version = 1.0.0
+mod_version = 1.1.0
 maven_group = protosky
 archives_base_name = protosky
 
