--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 
 # See https://modmuss50.me/fabric.html
-minecraft_version=1.16.2-rc1
-yarn_mappings=1.16.2-rc1+build.6
-loader_version=0.9.1+build.205
+minecraft_version=1.16.4
+yarn_mappings=1.16.4+build.7
+loader_version=0.10.8
+
+# Fabric api
+fabric_version=0.27.1+1.16
 
 # Mod Properties
-mod_version = 1.1.0
+mod_version = 1.1.1
 maven_group = protosky
 archives_base_name = protosky
 
