--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,16 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# See https://modmuss50.me/fabric.html
-minecraft_version=1.16.2-rc1
-yarn_mappings=1.16.2-rc1+build.6
-loader_version=0.9.1+build.205
+# Fabric Properties
+	# check these on https://fabricmc.net/use
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.6
+loader_version=0.11.3
+
+#Fabric api
+fabric_version=0.32.5+1.16
 
 # Mod Properties
-mod_version = 1.1.0
-maven_group = protosky
-archives_base_name = protosky
-
-# Dependencies
-# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-# fabric_version=0.10.2+build.337-1.16
+	mod_version = 1.0.0
+	maven_group = net.polarbub.dimThread
+	archives_base_name = dimThread
