--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,6 @@ loader_version=0.11.3
 fabric_version=0.32.5+1.16
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = net.polarbub.dimThread
-	archives_base_name = dimThread
+mod_version = 1.1.1
+maven_group = protosky
+archives_base_name = protosky
