--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.6
+minecraft_version=21w16a
+yarn_mappings=21w16a+build.9
 loader_version=0.11.3
 
 #Fabric api
