--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-minecraft_version=21w16a
-yarn_mappings=21w16a+build.9
+# check these on https://fabricmc.net/versions.html
+minecraft_version=21w17a
+yarn_mappings=21w17a+build.15
 loader_version=0.11.3
 
 #Fabric api
