--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ yarn_mappings=21w19a+build.2
 loader_version=0.11.3
 
 #Fabric api
+fabric_version=0.34.4+1.17
 
 # Mod Properties
 mod_version = 1.1.1
