--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
-minecraft_version=1.17-pre2
-yarn_mappings=1.17-pre2+build.1
+minecraft_version=1.17
+yarn_mappings=1.17+build.1
 loader_version=0.11.3
 
 # Mod Properties
-mod_version = 1.1.1
+mod_version = 1.1.2
 maven_group = protosky
 archives_base_name = protosky
